--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
-@import "base.css";
-@import "credit-card.css";
-@import "form.css";
+@import "./base.css";
+@import "./credit-card.css";
+@import "./form.css";
 
 @media (max-width: 420px) {
   :root {
